--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,18 @@
+
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8" />
   <title>Multi URL Opener</title>
-  <style>
-    body { font-family: Arial; width: 300px; padding: 10px; }
-    textarea { width: 100%; height: 120px; }
-    button { width: 100%; margin-top: 10px; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h3>Open Multiple URLs</h3>
-  <textarea id="urls" placeholder="Enter one URL per line"></textarea>
-  <button id="open">Open URLs</button>
-
+  <div class="container">
+    <h1>Multi URL Opener</h1>
+    <textarea id="urls" placeholder="Enter one URL per line..."></textarea>
+    <button id="openBtn">Open URLs</button>
+    <p class="footer">Made with ❤️</p>
+  </div>
   <script src="popup.js"></script>
 </body>
 </html>
