--- a/popup.html
+++ b/popup.html
@@ -2,17 +2,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Multi URL Opener</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<title>Multi URL Opener Pro</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Multi URL Opener</h1>
-    <textarea id="urls" placeholder="Enter one URL per line..."></textarea>
-    <button id="openBtn">Open URLs</button>
-    <p class="footer">Made with ❤️</p>
+<div class="container">
+  <h1>Multi URL Opener</h1>
+
+  <textarea id="urls" placeholder="Enter one URL per line..."></textarea>
+
+  <div class="row">
+    <label>Delay (ms)</label>
+    <input type="number" id="delay" value="0">
   </div>
-  <script src="popup.js"></script>
+
+  <div class="row checkbox">
+    <input type="checkbox" id="dedupe" checked>
+    <span>Remove duplicates</span>
+  </div>
+
+  <div class="row">
+    <button id="openBtn">Open URLs</button>
+    <button id="saveBtn">Save List</button>
+  </div>
+
+  <div class="counter">
+    Tabs opened: <span id="count">0</span>
+  </div>
+
+  <p class="footer">Created by @Vijay Malviya</p>
+</div>
+<script src="popup.js"></script>
 </body>
 </html>
